docs(stage-piece-map): Add getPieceMapByName
